@@ -24,4 +24,5 @@ GSM_Error SIEMENS_GetCalendar		(GSM_StateMachine *, GSM_CalendarEntry *);
 GSM_Error SIEMENS_ReplyGetMemory	(GSM_Protocol_Message, GSM_StateMachine *);
 GSM_Error SIEMENS_ReplyGetMemoryInfo(GSM_Protocol_Message msg, GSM_StateMachine *s);
 
+GSM_Error SIEMENS_SetMemory(GSM_StateMachine *s, GSM_MemoryEntry *entry);
 #endif
