@@ -20,6 +20,8 @@ ChangeLog
 =========
     
 2010???? - 1.27.92
+
+[+] * Write support for Siemens phonebook (bug #1129).
     
 20100204 - 1.27.91
 
